--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js'></script>
+    <script src='jquery.instavalidate.js'></script>
     <script src='caterwaul.js'></script>
     <script src='caterwaul.iter.js'></script>
     <script src='caterwaul.error.js'></script>
