--- a/client/index.html
+++ b/client/index.html
@@ -3,26 +3,11 @@
   <head>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js'></script>
     <script src='jquery.instavalidate.js'></script>
-    <script src='caterwaul.js'></script>
-    <script src='caterwaul.iter.js'></script>
-    <script src='caterwaul.error.js'></script>
-    <script src='caterwaul.continuation.js'></script>
-    <script src='caterwaul.seq.js'></script>
+    <script src='jquery.fix.append-multiple.js'></script>
+    <script src='caterwaul.all.js'></script>
     <script src='montenegro.jquery.js'></script>
     <script src='thermal.js'></script>
     <link href='style.css' rel='stylesheet' />
   </head>
-  <body>
-    <div id='live'>
-      <div id='toolbar'>
-        <button id='create-story'>Create story</button>
-      </div>
-      <div id='stories'></div>
-    </div>
-    <div id='templates' style='display:none'>
-      <div class='story' id='story'>
-        <h3 class='name'>Story name</h3>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
