Upgraded to the latest Caterwaul and Montenegro. The client still needs work.

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <script src='jquery.instavalidate.js'></script>
     <script src='jquery.fix.append-multiple.js'></script>
     <script src='caterwaul.all.js'></script>
-    <script src='montenegro.jquery.js'></script>
+    <script src='montenegro.client.js'></script>
     <script src='thermal.js'></script>
     <link href='style.css' rel='stylesheet' />
   </head>
