--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js'></script>
+    <script src='http://spencertipping.com/jquery-patched/jquery.st.js'></script>
     <script src='jquery.instavalidate.js'></script>
-    <script src='jquery.fix.append-multiple.js'></script>
     <script src='caterwaul.all.js'></script>
     <script src='montenegro.client.js'></script>
     <script src='thermal.js'></script>
